--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^6.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0"
   }
 }
